name:               haskell-hello-web
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://github.com/Azwraith42/haskell-hello-web
-- license:
-- license-file:
author:             Alec Reeves
-- maintainer:         
-- copyright:
category:           web
build-type:         simple
extra-source-files: README.md
cabal-version:      >=1.10

library
  hs-source-dirs:   src
  exposed-modules:  Lib
  build-depends:    base >= 4.7 && < 5
  default-language: Haskell2010

executable haskell-hello-web-exe
  hs-source-dirs:   App
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base
                  , haskell-hello-web
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/Azwraith42/haskell-hello-web